tests/demo/demo.exp
Error: 1/f.js:3
  3: function f(x) { return 42/x; }
                               ^ null. The operand of an arithmetic operation must be a number.

Error: 2/A.js:5
  5:   constructor(x) { this.x = x; }
                   ^ x. Missing annotation

Error: 2/A.js:9
  9:   onLoad(callback) {
              ^^^^^^^^ callback. Missing annotation

Error: 2/A.js:10
 10:     return callback(this.getX());
                         ^^^^^^^^^^^ Cannot call `callback` with `this.getX()` bound to `x` because number [1] is incompatible with string [2].
  References:
    4:   x: number; // instance field declaration
            ^^^^^^ [1]: number
   14: function callback(x: string) { return x.length; }
                            ^^^^^^ [2]: string


Found 4 errors
